fix z-index

--- a/css/common.css
+++ b/css/common.css
@@ -21,6 +21,7 @@ body {
   position: fixed;
   height: 100dvh;
   width: 100%;
+  z-index: 100;
   display: flex;
   justify-content: center;
   align-items: center;
